feat(): ion-hide-dark and ion-show-dark
Added two classes to easily show/hide content when using `prefers-color-scheme: dark` in your application.

--- a/core/src/css/display.scss
+++ b/core/src/css/display.scss
@@ -30,3 +30,16 @@
     }
   }
 }
+
+// Adds classes for displaying content based on prefers-color-scheme
+.ion-hide-when-dark {
+  @media (prefers-color-scheme: dark) {
+    display: none;
+  }
+}
+.ion-show-when-dark {
+  display: none;
+  @media (prefers-color-scheme: dark) {
+    display: block;
+  }
+}
