--- a/core/med-components/themes/medsoft-theme.scss
+++ b/core/med-components/themes/medsoft-theme.scss
@@ -44,4 +44,5 @@ $medsoft-colors: (
 // components
 
 @import "../../src/components/button/medgrupo/button.med.theme";
+@import "../../src/components/icon/medgrupo/icon.med.theme";
 @import "../../src/components/medgrupo/team/med-alternativas/med-alternativas.theme";
