--- a/core/src/components/medgrupo/global/med-agrupador/med-agrupador.scss
+++ b/core/src/components/medgrupo/global/med-agrupador/med-agrupador.scss
@@ -10,6 +10,7 @@
   flex-direction: column;
   align-items: center;
   color: var(--color);
+  cursor: pointer;
 
   ion-icon {
     font-size: 24px;
