--- a/core/src/components/select-popover/select-popover.md.scss
+++ b/core/src/components/select-popover/select-popover.md.scss
@@ -1,24 +1,27 @@
 @import "./select-popover";
 @import "./select-popover.md.vars";
 
-:host ion-list {
+ion-list {
   @include padding(0);
 }
 
-:host ion-list ion-radio {
+ion-list ion-radio {
   opacity: 0;
 }
 
-:host ion-item {
+ion-item {
   --inner-border-width: 0;
 }
 
-:host .item-radio-checked {
-  --background: rgba(0, 0, 0, .12);
-  --color: #{ion-color(primary, base)};
+.item-radio-checked {
+  --background: #{ion-color(primary, base, 0.08)};
+  --background-focused: #{ion-color(primary, base)};
+  --background-focused-opacity: 0.2;
+  --background-hover: #{ion-color(primary, base)};
+  --background-hover-opacity: 0.12;
 }
 
-:host .item-checkbox-checked {
+.item-checkbox-checked {
   --background-activated: #{$item-md-color};
   --background-focused: #{$item-md-color};
   --background-hover: #{$item-md-color};
